# hdfs-rs

./: .gitignore  Cargo.toml  README.md  README.txt  build.rs  exec.sh  index.html  search-index.js
dev-support/: diff.sh
hdfs/: enum.FileKind.html  enum.HdfsErr.html  index.html  sidebar-items.js  struct.BlockHosts.html  struct.FileInfo.html  struct.FileStatus.html  struct.HdfsFS.html  struct.HdfsFile.html  struct.HdfsFileInfoPtr.html  struct.HdfsFs.html  struct.HdfsFsCache.html  struct.HdfsUtil.html  struct.RzBuffer.html  struct.RzOptions.html
hdfs/binding/: enum.NativeMiniDfsCluster.html  enum.hadoopRzBuffer.html  enum.hadoopRzOptions.html  enum.hdfsBuilder.html  enum.hdfsFS.html  enum.hdfsFile.html  enum.tObjectKind.html  fn.hadoopReadZero.html  fn.hadoopRzBufferFree.html  (+77 more)
itertools/: struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.Dedup.html  struct.Group.html  struct.GroupBy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.Stride.html  struct.StrideMut.html  struct.TakeWhileRef.html  struct.Tee.html  struct.Unfold.html  struct.Unique.html  struct.UniqueBy.html  struct.WhileSome.html  struct.Zip.html  struct.ZipLongest.html  struct.ZipSlices.html
src/: binding.rs  bindings.rs  cache.rs  dfs.rs  err.rs  lib.rs  minidfs.rs  native.rs  util.rs
(+189 files in other folders)
