[package]
name = "hdfs"
description = "libhdfs binding library and rust-style new API"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik dot choi at gmail dot com>" ]
readme = "README.md"
keywords = ["hdfs", "hadoop"]
license = "Apache-2.0"

build = "build.rs"

[lib]
name = "hdfs"
path = "src/lib.rs"

[dependencies]
log = "0.3.1"
url = "0.2.31"

[build-dependencies]
gcc = "0.3.5"