[package]
name = "hdfs"
description = "libhdfs binding library and rust-style new API"
version = "0.0.2"
authors = [ "Hyunsik Choi <hyunsik dot choi at gmail dot com>" ]
license = "Apache-2.0"

keywords = ["hdfs", "hadoop"]
documentation = "http://hyunsik.github.io/hdfs-rs/"
homepage = "https://github.com/hyunsik/hdfs-rs"
repository = "https://github.com/hyunsik/hdfs-rs.git"
readme = "README.md"

build = "build.rs"

[lib]
name = "hdfs"
path = "src/lib.rs"

[dependencies]
log = "0.3.1"
url = "0.2.31"

[build-dependencies]
gcc = "0.3.5"
